--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -29,11 +30,11 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/eslintrc": "^3",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/mdx": "^2.0.13",
-    "@types/prismjs": "^1.26.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "husky": "^9.1.7",
