feat: add image-size library to get image size

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "image-size": "^2.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "prism-react-renderer": "^2.4.1",
