--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "image-size": "^2.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "plaiceholder": "^3.0.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-type-animation": "^3.2.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
