--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-type-animation": "^3.2.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
-    "sharp": "^0.34.0",
+    "sharp": "0.33.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
