--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.2.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.4",
     "@tailwindcss/postcss": "^4.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "image-size": "^2.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.6",
     "plaiceholder": "^3.0.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.0.0",
@@ -29,8 +31,9 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "sharp": "0.33.5",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
