--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "es-toolkit": "^1.37.2",
     "github-slugger": "^2.0.0",
     "image-size": "^2.0.2",
     "lucide-react": "^0.475.0",
