--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "next": "15.3.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "notion-to-md": "^3.1.9",
+    "notion-client": "^7.4.3",
+    "notion-types": "^7.4.3",
+    "notion-utils": "^7.4.3",
     "plaiceholder": "^3.0.0",
     "prism-react-renderer": "^2.4.1",
+    "prism-themes": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-notion-x": "^7.4.3",
     "react-type-animation": "^3.2.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
@@ -57,6 +61,7 @@
     "@types/mdast": "^4.0.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
