--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.7",
