--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "framer-motion": "^12.26.2",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.475.0",
-    "next": "15.5.7",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "notion-client": "^7.7.3",
     "notion-types": "^7.7.3",
